<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#302E3B"
    >

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id = "@+id/header"
        />
    <include
        layout="@layout/navbar"
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/titleModifyProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modificar Proyecto"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/nameModifyProject"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="15"
        android:hint="@string/nameCreateNewProject"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleModifyProject"
        app:layout_constraintVertical_bias="0.03" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DateLayout"
        android:layout_width="310dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:layout_weight="1"
        android:background="#302E3B"
        android:textColor="@color/white"
        style="@style/Widget.Design.TextInputLayout"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameModifyProject">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateCreateNewProject"
            android:clickable="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/dateEdt"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            android:drawableTint="@color/white"
            android:focusable="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/modifybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGray"
        android:onClick="submitbuttonHandler"
        android:text="Modify"
        android:textColor="#302E3B"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>