...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/proyectosOrganizador"
    >
    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
...
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleProyectosOrganizador" />
    <TextView
        android:id="@+id/tvNewProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradent_horizontal"
        android:ems="22"
        app:layout_constraintVertical_bias="0.24"
        android:fontFamily="@font/inter"
        android:padding="16dp"
        android:text="Nuevo Proyecto"
        android:textColor="@color/white"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleProyectosOrganizador" />
...
        app:layout_constraintRight_toRightOf="@+id/tvNewProject"
        app:layout_constraintTop_toTopOf="@+id/tvNewProject"
        app:layout_constraintLeft_toLeftOf="@+id/tvNewProject"
        app:layout_constraintHorizontal_bias="0.95"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProjects"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="0.2"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProjectImage"
...
