<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradent_horizontal"
        android:fontFamily="@font/inter"
        android:padding="16dp"
        android:text="Project Name"
        android:textColor="@color/white"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEditIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_white"
        app:layout_constraintBottom_toBottomOf="@+id/tvProjectName"
        app:layout_constraintRight_toRightOf="@+id/tvProjectName"
        app:layout_constraintTop_toTopOf="@+id/tvProjectName"
        android:layout_marginRight="20dp"

        />

    <ImageView
        android:id="@+id/deleteProjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/delete_button"
        app:layout_constraintBottom_toBottomOf="@+id/tvProjectName"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintRight_toRightOf="@+id/tvProjectName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvProjectName" />


</androidx.constraintlayout.widget.ConstraintLayout>